--- a/equations/equations.tex
+++ b/equations/equations.tex
@@ -23,7 +23,7 @@
 &\frac{\partial \chi}{\partial f} (f,\sigma) = -2 \sum_i (\alpha_i - \varepsilon_i(f,\sigma))\left( \frac{\partial \varepsilon_i}{\partial f}(f,\sigma) \right)\\
 &\frac{\partial \chi}{\partial \sigma} (f,\sigma) = -2 \sum_i (\alpha_i - \varepsilon_i(f,\sigma))\left( \frac{\partial \varepsilon_i}{\partial \sigma}(f,\sigma) \right)\\ \\
 &\frac{\partial^2 \chi}{\partial f^2} (f,\sigma) = 2 \sum_i \left( \frac{\partial \varepsilon_i}{\partial f} (f,\sigma) \right)^2\\ 
-&\frac{\partial^2 \chi}{\partial \sigma^2} (f,\sigma) = \sum_i \left[ \left( \frac{\partial \varepsilon_i}{\partial \sigma} (f,\sigma) \right)^2 - (\alpha_i-\varepsilon_i(f,\sigma)) \left( \frac{\partial^2 \varepsilon_i}{\partial \sigma^2} (f,\sigma) \right)\right] \\
+&\frac{\partial^2 \chi}{\partial \sigma^2} (f,\sigma) = 2 \sum_i \left[ \left( \frac{\partial \varepsilon_i}{\partial \sigma} (f,\sigma) \right)^2 - (\alpha_i-\varepsilon_i(f,\sigma)) \left( \frac{\partial^2 \varepsilon_i}{\partial \sigma^2} (f,\sigma) \right)\right] \\
 &\frac{\partial^2 \chi}{\partial \sigma \partial f} (f,\sigma)= 2 \sum_i \left[ \left( \frac{\partial \varepsilon_i}{\partial \sigma} (f,\sigma) \right) \left( \frac{\partial \varepsilon_i}{\partial f} (f,\sigma) \right) - (\alpha_i-\varepsilon_i(f,\sigma)) \left( \frac{\partial^2 \varepsilon_i}{\partial \sigma \partial f} (f,\sigma) \right) \right]\\
 &\frac{\partial^2 \chi}{\partial f \partial \sigma} (f,\sigma) = 2 \sum_i \left[ \left( \frac{\partial \varepsilon_i}{\partial f} (f,\sigma) \right) \left( \frac{\partial \varepsilon_i}{\partial \sigma} (f,\sigma) \right) - (\alpha_i-\varepsilon_i(f,\sigma)) \left( \frac{\partial^2 \varepsilon_i}{\partial f \partial \sigma} (f,\sigma) \right) \right]\\ \\ 
 &\varepsilon_i(f,\sigma) = f \varepsilon_{wn_i}(\sigma)+(1-f) \varepsilon_{sat_i}(\sigma)\\ \\
